Adjust the media querry to be responsive on Tablet

--- a/tailwind.html
+++ b/tailwind.html
@@ -13,7 +13,7 @@
 <body class="bg-gray-100 flex justify-center content-center p-5 font-Outfit">
   <main class="bg-white p-5 pb-14 rounded-2xl text-center">
     <div class="flex">
-      <img class="rounded-2xl mb-3 min-md:w-80 m-auto" src="qr-code-component-main/images/image-qr-code.png" alt="QR image">
+      <img class="rounded-2xl mb-3 min-[318px]:w-80 m-auto" src="qr-code-component-main/images/image-qr-code.png" alt="QR image">
     </div>
     <div>
       <div>
