--- a/tailwind.html
+++ b/tailwind.html
@@ -10,10 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-100 flex justify-center content-center p-5 font-Outfit">
-  <main class="bg-white p-5 pb-14 rounded-2xl text-center">
+<body class="bg-gray-100 h-screen flex font-Outfit">
+  <main class="bg-white p-5 h-2/3 m-auto rounded-2xl text-center min-[376px]:h-4/5">
     <div class="flex">
-      <img class="rounded-2xl mb-3 min-[318px]:w-80 m-auto" src="qr-code-component-main/images/image-qr-code.png" alt="QR image">
+      <img class="rounded-2xl mb-3 min-[376px]:w-80 m-auto" src="qr-code-component-main/images/image-qr-code.png" alt="QR image">
     </div>
     <div>
       <div>
