Done adjusting README

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div>
       <div>
         <h1 class="text-2xl font-bold text-gray-900">
-          <p>Improve your front-end</p> <p>skills by building projects</p>
+          <p>Improve your front-end</p>
+          <p>skills by building projects</p>
         </h1>
       </div>
       <div class="mt-4 text-gray-400">
