--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </div>
     <div>
       <div>
-        <h1 class="text-2xl font-bold text-gray-900">
-          <p>Improve your front-end</p>
-          <p>skills by building projects</p>
-        </h1>
+        <div class="text-2xl font-bold text-gray-900">
+          <h1>Improve your front-end</h1>
+          <h1>skills by building projects</h1>
+        </div>
       </div>
       <div class="mt-4 text-gray-400">
         <p>Scan the QR code to visit Frontend</p>
